chore: bump to 0.21.0, update path deps, QC formatting fixes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "embeddenator"
-version = "0.20.0-alpha.1"
+version = "0.21.0"
 edition = "2021"
 authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
 description = "Experimental sparse ternary VSA implementation for holographic data encoding (alpha)"
@@ -46,14 +46,14 @@ name = "embeddenator"
 path = "src/main.rs"
 
 [dependencies]
-# Embeddenator component libraries
-embeddenator-vsa = "0.20.0-alpha.1"
-embeddenator-retrieval = "0.20.0-alpha.1"
-embeddenator-fs = "0.20.0-alpha.2"
-embeddenator-interop = "0.20.0-alpha.1"
-embeddenator-io = "0.20.0-alpha.1"
-embeddenator-obs = { version = "0.20.0-alpha.1", features = ["tracing"] }
-embeddenator-cli = "0.20.0-alpha.1"
+# Embeddenator component libraries (path dependencies for local dev, version for crates.io)
+embeddenator-vsa = { version = "0.21.0", path = "../embeddenator-vsa" }
+embeddenator-retrieval = { version = "0.20.0", path = "../embeddenator-retrieval" }
+embeddenator-fs = { version = "0.23.0", path = "../embeddenator-fs" }
+embeddenator-interop = { version = "0.21.0", path = "../embeddenator-interop" }
+embeddenator-io = { version = "0.21.0", path = "../embeddenator-io" }
+embeddenator-obs = { version = "0.21.0", path = "../embeddenator-obs", features = ["tracing"] }
+embeddenator-cli = { version = "0.21.0", path = "../embeddenator-cli" }
 
 # External dependencies
 clap = { version = "4.5", features = ["derive"] }
