--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 repository = "https://github.com/tzervas/embeddenator"
 homepage = "https://github.com/tzervas/embeddenator"
 keywords = ["vsa", "holographic", "vector-symbolic", "ternary", "experimental"]
-categories = ["filesystem", "encoding", "science", "experimental"]
+categories = ["filesystem", "encoding", "science"]
 documentation = "https://docs.rs/embeddenator"
 readme = "README.md"
 
@@ -48,9 +48,9 @@ path = "src/main.rs"
 [dependencies]
 # Embeddenator component libraries (path dependencies for local dev, version for crates.io)
 embeddenator-vsa = { version = "0.21.0", path = "../embeddenator-vsa" }
-embeddenator-retrieval = { version = "0.20.0", path = "../embeddenator-retrieval" }
+embeddenator-retrieval = { version = "0.21.0", path = "../embeddenator-retrieval" }
 embeddenator-fs = { version = "0.23.0", path = "../embeddenator-fs" }
-embeddenator-interop = { version = "0.21.0", path = "../embeddenator-interop" }
+embeddenator-interop = { version = "0.22.0", path = "../embeddenator-interop" }
 embeddenator-io = { version = "0.21.0", path = "../embeddenator-io" }
 embeddenator-obs = { version = "0.21.0", path = "../embeddenator-obs", features = ["tracing"] }
 embeddenator-cli = { version = "0.21.0", path = "../embeddenator-cli" }
